--- a/src/app/components/main-box/main-box.component.css
+++ b/src/app/components/main-box/main-box.component.css
@@ -3,5 +3,6 @@ div{
     width: 100%;
     height: 50vh;
     margin-top: 1.5rem;
-    border: solid gray 1px
+    border: solid gray 1px;
+    border-radius: 5px;
 }
