--- a/src/app/components/main-box/main-box.component.html
+++ b/src/app/components/main-box/main-box.component.html
@@ -1,3 +1,5 @@
 <div>
-    <app-button ></app-button>
+    <div class="mainBox">
+    </div>
+    <app-button text="Add Expense"></app-button>
 </div>
