--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,9 @@ main{
     margin: auto;
     margin-top: 20vh;
 }
+
+@media only screen and (max-width: 850px) {
+    main{
+        width: 100%;
+    }
+  }
