--- a/src/app/components/main-box/main-box.component.css
+++ b/src/app/components/main-box/main-box.component.css
@@ -1,8 +1,15 @@
-div{
+.mainBox{
     background-color: #0C0A09;
     width: 100%;
-    height: 50vh;
-    margin-top: 1.5rem;
+    height: 95%;
     border: solid gray 1px;
     border-radius: 5px;
+    position: relative;
+    margin: 0;
+}
+
+div{
+    height: 55vh;
+    margin-top: 1.5rem;
+    position: relative;
 }
