--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,3 +1,3 @@
-<button (click)="onClick()">
-    {{text}}
-</button>
+<input class="submit" type="submit" placeholder={{text}} (click)="onClick()">
+    <!-- {{text}} -->
+
